# citybuilding-tools

./: .gitignore  LICENSE  README.md  main.cpp  sgfile.cpp
engconverter/: CMakeLists.txt  convertertab.cpp  convertertab.h  engconverter.cpp  engconverter.h  fileconverter.cpp  fileconverter.h  logger.cpp  logger.h  main.cpp  messageentry.cpp  messageentry.h  messagefile.cpp  messagefile.h  messagefileengstream.cpp  messagefileengstream.h  messagefilexmlstream.cpp  messagefilexmlstream.h  textfile.cpp  textfile.h  textfileengstream.cpp  textfileengstream.h  textfilexmlstream.cpp  textfilexmlstream.h  textgroup.cpp  textgroup.h
engconverter/res/: icon.rc  resources.qrc
engconverter/src/: CMakeLists.txt  convertertab.cpp  convertertab.h  engconverter.cpp  engdatastream.cpp  engdatastream.h  fileconverter.cpp  fileconverter.h  helpdialog.cpp  helpdialog.h  japanesecodec.cpp  japanesecodec.h  koreancodec.cpp  koreancodec.h  logger.cpp  logger.h  messageentry.cpp  messageentry.h  messagefile.cpp  messagefile.h  messagefileengstream.cpp  messagefileengstream.h  messagefilexmlstream.cpp  messagefilexmlstream.h  simplifiedchinesecodec.cpp  simplifiedchinesecodec.h  textfile.cpp  textfile.h  textfileengstream.cpp  textfileengstream.h  textfilexmlstream.cpp  textfilexmlstream.h  textgroup.cpp  textgroup.h  traditionalchinesecodec.cpp  traditionalchinesecodec.h  xmlstream.cpp  xmlstream.h
gui/: extractthread.cpp  inputdirpage.cpp  outputdirpage.cpp
qsgreader/: graphicsfile.cpp  graphicsfile.h  imagebox.cpp  imagebox.h  imagetreeitem.cpp  main.cpp  mainwindow.cpp  mainwindow.h  sgbitmap.cpp  sgbitmap.h  sgfile.cpp  sgfile.h  sgfilerecord.cpp  sgfilerecord.h  sgimage.cpp  sgimage.h  sgimagerecord.cpp  sgimagerecord.h  sgreader.pro  sgtreewidgetitem.cpp  sgtreewidgetitem.h  treewidgetfileitem.cpp  treewidgetfileitem.h  treewidgetimageitem.cpp  treewidgetimageitem.h
sgreader/: aboutdialog.cpp  aboutdialog.h  helpdialog.cpp  helpdialog.h  imagetreeitem.h  licencedialog.cpp  (+11 more)
(+25 files in other folders)
